Wrote some more on the report.

--- a/notebooks/10.10_SSRS_EDA.ipynb
+++ b/notebooks/10.10_SSRS_EDA.ipynb
@@ -20,6 +20,9 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -523,7 +526,7 @@
     "from sklearn.svm import SVR\n",
     "model = LinearRegression()\n",
     "mask = data_speed['sog'] > 1\n",
-    "data = data_speed.loc[mask].resample('30S').mean().dropna()\n",
+    "data = data_speed.loc[mask].resample('2S').mean().dropna()\n",
     "\n",
     "def features(data):\n",
     "    X = pd.DataFrame(index=data.index)\n",
@@ -533,6 +536,7 @@
     "    X['sog**4'] = data['sog']**4\n",
     "    X['sog**5'] = data['sog']**5\n",
     "    X['sog**6'] = data['sog']**6\n",
+    "    X['sog**7'] = data['sog']**7\n",
     "    \n",
     "    return X\n",
     "\n",
@@ -594,7 +598,10 @@
    "id": "26ce4a40-2694-4f1f-8cad-c4cc6ba1d621",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = SVR(kernel='sigmoid', tol=0.0000000000001)\n",
+    "model.fit(X[['sog']], y)"
+   ]
   },
   {
    "cell_type": "code",
@@ -602,340 +609,48 @@
    "id": "84ebf2e2-4b19-43ee-9af0-ebfd7dce7de2",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "789008b6-105f-41a4-9663-39c035282a9a",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "model = LinearRegression(fit_intercept=True)\n",
-    "\n",
-    "def add_features(X):\n",
-    "    X['rpm**2'] = X['rpm']**2\n",
-    "    #X['rpm**3'] = X['rpm']**3\n",
-    "    X['rpm**4'] = X['rpm']**4\n",
-    "    #X['rpm**5'] = X['rpm']**5\n",
-    "    \n",
-    "\n",
-    "y = data_speed['sog'].copy()\n",
-    "X = data_speed[['rpm']].copy()\n",
-    "add_features(X)\n",
-    "\n",
-    "model.fit(X=X, y=y)"
+    "model.score(X[['sog']], y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "146bf4e2-141d-4044-84fa-2874bb6c60ae",
+   "id": "0427670d-5b07-48e9-9d41-e8f95f354635",
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = LinearRegression()\n",
+    "model.fit(X, y)\n",
     "model.score(X, y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca496ed9-f397-4d4d-924f-9982c249d4f0",
+   "id": "5b16c09e-7622-4383-b76a-9d68109c8cfd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rpms = np.linspace(data_speed['rpm'].min(), data_speed['rpm'].max(), 100)\n",
-    "f = scipy.interpolate.interp1d(x=rpms, y=rpms, kind='nearest')\n",
-    "data_speed['rpm_round'] = f(data_speed['rpm'])\n",
-    "data_weighted = data_speed.groupby(by='rpm_round').mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fd075d5-1c62-4f13-bdb9-dc92f126fb42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y2 = data_weighted['sog'].copy()\n",
-    "X2 = data_weighted[['rpm']].copy()\n",
-    "add_features(X2)\n",
-    "model2 = LinearRegression(fit_intercept=True)\n",
-    "model2.fit(X=X2, y=y2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e979329-ba05-4803-9a25-8fd69d531b81",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model3 = Ridge(alpha=1000, fit_intercept=True)\n",
-    "model3.fit(X,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "520502c5-4a32-4bac-b6d0-fe4438dcc958",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model4 = Lasso(alpha=100, fit_intercept=True)\n",
-    "model4.fit(X,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48efda9a-0d25-49de-a3c4-f7da76f8045d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.svm import SVR\n",
-    "model5 = SVR()\n",
-    "model5.fit(X,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "124689ac-8d19-4a08-af3c-7464fb7f5680",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "models = {'Linear1': model, \n",
-    "          'Linear2': model2, \n",
-    "          'Ridge': model3, \n",
-    "          'Lasso': model4,\n",
-    "          'SVR': model5}\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.preprocessing import PolynomialFeatures, SplineTransformer\n",
+    "from sklearn.pipeline import make_pipeline\n",
     "\n",
-    "X_pred = pd.DataFrame()\n",
-    "X_pred['rpm'] = np.linspace(data_speed['rpm'].min(), data_speed['rpm'].max(), 100)\n",
-    "add_features(X_pred)\n",
-    "\n",
-    "df_predictions = pd.DataFrame()\n",
-    "for name, model_ in models.items():\n",
-    "    df_predictions[name] = model_.predict(X_pred)\n",
-    "\n",
-    "fig,ax=plt.subplots()\n",
-    "data_speed.plot(x='rpm', y='sog', style='.', alpha=0.01, ax=ax)\n",
-    "\n",
-    "for name, y_pred in df_predictions.items():\n",
-    "    ax.plot(X_pred['rpm'], y_pred, label=name)\n",
-    "\n",
-    "ax.legend()"
+    "model = make_pipeline(SplineTransformer(n_knots=4, degree=4), Ridge(alpha=1e-3))\n",
+    "model.fit(X[['sog']],y)\n",
+    "model.score(X[['sog']],y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2399979-7ee8-4b82-9b7d-de3030c67922",
+   "id": "9ca5c458-71ae-497e-be47-0fa18d4d3b21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_speed.plot(y='sog')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff27b315-03f4-4d0c-bdae-533ac1295557",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_new.plot(y='sog')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95e79e5c-30c0-4f89-a1d6-965b3be47ee8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_new.sort_index(inplace=True)\n",
-    "data_new['t'] = (data_new.index-data_new.index[0]).total_seconds()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "829effb3-51c1-4b5b-8a00-200f5c8b8d94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "distance = scipy.integrate.trapz(data_new['sog'], x=data_new['t'])\n",
-    "distance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c75d0d8-3612-4d67-84e6-df96defcd32a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "consumption = scipy.integrate.trapz(data_new['fuel_rate'], x=data_new['t'])\n",
-    "consumption"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67d40577-18c9-4a5f-9ad7-d5bea243d91c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_new.index[-1] - data_new.index[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7d9ec91-b504-4576-8005-8de0535bc986",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "consumption/distance*1852"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "840d1f98-3c1f-43f7-94de-81feb7b3bde2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "consumption/data_new.iloc[-1]['t']*3600"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c03de0d3-db71-41c1-a769-5851f72b6f1b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import geopy.distance\n",
-    "\n",
-    "coords_1 = (52.2296756, 21.0122287)\n",
-    "coords_2 = (52.406374, 100)\n",
-    "\n",
-    "geopy.distance.geodesic(coords_1, coords_2).m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1727cb1e-9393-47a8-90e1-cb391280fe10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "geopy.distance.distance(coords_1, coords_2).m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7409a651-7636-4c84-9aaa-8e8b103b262a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_new['latitude']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b674dce-ccac-4ac1-9372-63055ba33fff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data2['t'] = (data2.index-data2.index[0]).total_seconds()\n",
-    "consumption = scipy.integrate.trapz(data2['fuel_rate'], x=data2['t'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04779a80-e2b2-4586-8631-16d22ba9e788",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "consumption/distance*1852"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acfe6a99-395a-4467-995b-f3958b5abb31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "consumption/data2['t'][-1]*3600"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4914dd10-7428-427f-9b4b-93d905874e66",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data2['sog'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01ff6f8f-26a2-45a0-81a0-c19213961834",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "distance/data2.iloc[-1]['t']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5a598c6-d4d4-47d0-bf32-2ae652f0d165",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data2.plot(kind='line', y='sog')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13b0ef66-3e76-4061-ad20-43a54cd6f522",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_new['sog'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1759d6b1-0174-4b59-9991-702f60eb686d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_new['t'].diff().plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "196c0130-7e6e-4fcb-a8fa-ebba7c4e5d3a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask = data_new['t'].diff() > 30\n",
-    "data_new.loc[mask]"
+    "model=Ridge(alpha=0.5)\n",
+    "model.fit(X,y)\n",
+    "model.score(X,y)"
    ]
   },
   {
@@ -950,6 +665,150 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5e4548ab-ee60-43a5-9e99-f8fb700a5b9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_selection import SelectKBest\n",
+    "from sklearn.feature_selection import f_regression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import RepeatedKFold\n",
+    "cv = RepeatedKFold(n_splits=3, n_repeats=5, random_state=1)\n",
+    "\n",
+    "standard_scaler = StandardScaler()\n",
+    "polynomial_features = PolynomialFeatures(degree=7)\n",
+    "select_k_best = SelectKBest(score_func=f_regression, k=7)\n",
+    "linear_regression = LinearRegression()\n",
+    "\n",
+    "steps = [\n",
+    "    ('scaler', standard_scaler),\n",
+    "    ('polynomial_features', polynomial_features),\n",
+    "    ('select_k_best', select_k_best),\n",
+    "    ('linear_regression', linear_regression),\n",
+    "]\n",
+    "\n",
+    "model = Pipeline(steps=steps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91dae9db-765c-4efa-bc9b-3f3b0347e614",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "grid = dict()\n",
+    "grid['select_k_best__k'] = [i for i in range(10)]\n",
+    "grid['polynomial_features__degree'] = [i for i in range(3, 15)]\n",
+    "\n",
+    "\n",
+    "# define the grid search\n",
+    "search = GridSearchCV(estimator=model, param_grid=grid, scoring='neg_mean_absolute_error', n_jobs=-1, cv=cv)\n",
+    "# perform the search\n",
+    "search_result = search.fit(X[['sog']], y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94be1b6c-89ae-4000-8527-129a3c40ebcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "steps = [\n",
+    " ('transformer' ,SplineTransformer(n_knots=4, degree=3)),\n",
+    " ('estimator', Ridge(alpha=1e-3)),\n",
+    "]\n",
+    "  \n",
+    "model = Pipeline(steps)\n",
+    "\n",
+    "grid = dict()\n",
+    "grid['transformer__n_knots'] = [i for i in range(5)]\n",
+    "grid['transformer__degree'] = [i for i in range(10)]\n",
+    "\n",
+    "# define the grid search\n",
+    "search = GridSearchCV(estimator=model, param_grid=grid, scoring='neg_mean_absolute_error', n_jobs=-1, cv=cv)\n",
+    "# perform the search\n",
+    "search_result = search.fit(X[['sog']], y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dad8d01d-85ed-42eb-81ae-307becdca089",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = search_result.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5466f1f-1636-45a3-be45-0db941752af2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.score(X[['sog']],y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df0d8890-f784-40f3-82a4-cde91de33bbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78ea6d19-568d-401d-baad-6f0aa3e01a9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_pred = pd.DataFrame()\n",
+    "X_pred['sog'] = np.linspace(data['sog'].min(), data['sog'].max(), 100)\n",
+    "\n",
+    "prediction = X_pred.copy()\n",
+    "prediction['fuel_rate'] = model.predict(X_pred)\n",
+    "prediction['fuel_per_m'] = prediction['fuel_rate']/X_pred['sog']*1000/3600*1852"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55ca7287-fb5f-4183-aafa-454a1ad13db3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "data['fuel_per_m'] = data['fuel_rate']/data['sog']*1000/3600*1852\n",
+    "data.resample('10S').mean().plot(x='sog', y='fuel_per_m', style='.', alpha=0.05, ax=ax, label='__no_label__')\n",
+    "\n",
+    "ax.set_ylim(data['fuel_per_m'].quantile(0.01), \n",
+    "            data['fuel_per_m'].quantile(0.90))\n",
+    "ax.plot([],'b.', label='data')\n",
+    "\n",
+    "prediction.plot(x='sog', y='fuel_per_m', ax=ax, label='regression')\n",
+    "ax.set_xticks(np.arange(0,int(np.ceil(data['sog'].max())),1));\n",
+    "ax.grid(True)\n",
+    "ax.legend()\n",
+    "ax.set_ylabel('Consumption per nautical mile [L/NM]')\n",
+    "ax.set_xlabel('Speed over ground [m/s]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee7f23cc-bfdb-4d0d-956d-5d2f23af6e5b",
    "metadata": {},
    "outputs": [],
    "source": []
