sending SSRS first report.

--- a/docs/ssrs/01.01_introduction.ipynb
+++ b/docs/ssrs/01.01_introduction.ipynb
@@ -21,7 +21,7 @@
     "height: 300px\n",
     "name: vessel\n",
     "---\n",
-    "One of the ships in Hallberg Rassy ship class.\n",
+    "One of the ships in Hallberg Rassy ship class. Copyright SSRS.\n",
     "```\n"
    ]
   },
