--- a/docs/ssrs/03.01_results.ipynb
+++ b/docs/ssrs/03.01_results.ipynb
@@ -28,12 +28,17 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import seaborn as sns\n",
     "width=20\n",
     "height=3\n",
     "#plt.rcParams[\"figure.figsize\"] = (width,height)\n",
     "#sns.set(rc={'figure.figsize':(width,height)})\n",
+    "\n",
+    "import matplotlib\n",
+    "plt.style.use('paper')\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "set_matplotlib_formats('pdf')\n",
     "\n",
     "#import seaborn as sns\n",
     "import os\n",
@@ -109,6 +114,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d53b2411-61c2-4f81-a9aa-5c7c6eaff223",
+   "metadata": {},
+   "source": [
+    "## Statistics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "dcb2d977-ac62-435c-9651-af605d639ddf",
@@ -119,12 +132,12 @@
    },
    "outputs": [],
    "source": [
-    "interesting = ['ship','consumption','consumption per hour', 'consumption per nautical mile', 'distance', 'sog_kt', 'time']\n",
+    "interesting = ['ship','consumption','consumption per hour', 'consumption per nautical mile', 'distance', 'sog', 'time']\n",
     "\n",
     "statistics_summary_tables = {}\n",
     "for item, statistics_summary in statistics_all.items():\n",
     "\n",
-    "    statistics_summary['sog_kt'] = statistics_summary['sog']*3.6/1.852\n",
+    "    statistics_summary['sog'] = statistics_summary['sog']*3.6/1.852\n",
     "    statistics_summary['ship'] = [key.split('_')[0] for key in statistics_summary.index]\n",
     "    statistics_summary_table = statistics_summary[interesting].copy()\n",
     "    statistics_summary_table['time'] = statistics_summary_table['time']/3600\n",
@@ -134,7 +147,7 @@
     "        'consumption per hour' : 'l/h',\n",
     "        'consumption per nautical mile' : 'l/NM',\n",
     "        'distance':'NM', \n",
-    "        'sog_kt': 'kts',\n",
+    "        'sog': 'kts',\n",
     "        'time' : 'h',\n",
     "    \n",
     "    }\n",
@@ -156,11 +169,11 @@
    "id": "b2732df4-8fcf-439d-b668-164733ca6b86",
    "metadata": {},
    "source": [
-    "Data has been collected during one month time for two vessels SSRS15-01 (01) and SSRS15-03 (03). The total fuel consumption, sailed distance during this period is shown in {numref}`statistics_all` and {numref}`bars_all`. The fuel consumption during this period is very similar for both vessels. Majority of the time the ships are not moving, so that the average speed over ground (sog) is very small.\n",
+    "Data was collected during one month time for two vessels SSRS15-01 (01) and SSRS15-03 (03). The total fuel consumption and sailed distance are shown in {numref}`statistics_all` and {numref}`bars_all`. The fuel consumption during this period is very similar for both vessels. Majority of the time the ships are not moving, so that the average speed over ground (sog) is very small.\n",
     "\n",
-    "Data points where the ships are moving (sog > 0) have been filtered out and corresponding statistics are shown in {numref}`statistics_moving` and {numref}`bars_moving`. The average speed for 01 is now much higher than 03, which also increases the consumption per hour, but is is also interesting to note that the consumption per nautical mile is much lower for 01.\n",
+    "Data points where the ships are moving (sog > 0) have been filtered out and corresponding statistics are shown in {numref}`statistics_moving` and {numref}`bars_moving`. The average speed for 01 is now much higher than 03, which also increases the consumption per hour. Note that the consumption per nautical mile (CNM) is much lower for 01.\n",
     "\n",
-    "Data points where the ships are running (sog > 2 kts) have been filtered out and corresponding statistics are shown in {numref}`statistics_running` and {numref}`bars_running`. 03 has only 7 hours of this data."
+    "Data points where the ships are running (sog > 2 kts) have been filtered out and corresponding statistics are shown in {numref}`statistics_running` and {numref}`bars_running`. Note that 03 has only 7 hours of this data."
    ]
   },
   {
@@ -176,21 +189,21 @@
     "  - consumption per hour [l/h]\n",
     "  - consumption per nautical mile [l/NM]\n",
     "  - distance [NM]\n",
-    "  - sog_kt [kts]\n",
+    "  - sog [kts]\n",
     "  - time [h]\n",
     "* - SSRS15-01\n",
     "  - 7.7\n",
     "  - 20.1\n",
     "  - 11.6\n",
     "  - 660.3\n",
-    "  - 1.7\n",
+    "  - 3.4\n",
     "  - 380.9\n",
     "* - SSRS15-03\n",
     "  - 7.0\n",
     "  - 15.0\n",
     "  - 33.3\n",
     "  - 210.8\n",
-    "  - 0.4\n",
+    "  - 0.9\n",
     "  - 468.8\n",
     "\n",
     "```\n",
@@ -204,21 +217,21 @@
     "  - consumption per hour [l/h]\n",
     "  - consumption per nautical mile [l/NM]\n",
     "  - distance [NM]\n",
-    "  - sog_kt [kts]\n",
+    "  - sog [kts]\n",
     "  - time [h]\n",
     "* - SSRS15-01\n",
     "  - 4.6\n",
     "  - 62.6\n",
     "  - 7.0\n",
     "  - 649.0\n",
-    "  - 8.9\n",
+    "  - 17.3\n",
     "  - 72.9\n",
     "* - SSRS15-03\n",
     "  - 4.0\n",
     "  - 17.7\n",
     "  - 20.4\n",
     "  - 197.4\n",
-    "  - 0.9\n",
+    "  - 1.7\n",
     "  - 227.9\n",
     "\n",
     "```\n",
@@ -232,24 +245,24 @@
     "  - consumption per hour [l/h]\n",
     "  - consumption per nautical mile [l/NM]\n",
     "  - distance [NM]\n",
-    "  - sog_kt [kts]\n",
+    "  - sog [kts]\n",
     "  - time [h]\n",
     "* - SSRS15-01\n",
     "  - 4.0\n",
     "  - 107.2\n",
     "  - 6.2\n",
     "  - 638.9\n",
-    "  - 17.2\n",
+    "  - 33.4\n",
     "  - 37.2\n",
     "* - SSRS15-03\n",
     "  - 1.2\n",
     "  - 164.1\n",
     "  - 7.6\n",
     "  - 153.7\n",
-    "  - 21.5\n",
+    "  - 41.8\n",
     "  - 7.2\n",
     "\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -327,7 +340,7 @@
    "id": "a75491e5-7882-48ab-bc1d-38f58998e7b5",
    "metadata": {},
    "source": [
-    "If the speeds are divided into equaly spaced bins (2 kts), mean values and standard deviation can be calculated for each bin to see how the consumption changes with speed which can be seen in {numref}`mean_consumption_sog` and {numref}`speed_table`.\n",
+    "If the speeds are divided into equaly spaced (2 kts) bins, mean values and standard deviation can be calculated for each bin to see how the consumption changes with speed which can be seen in {numref}`mean_consumption_sog` and {numref}`speed_table`.\n",
     "\n",
     "```{glue:figure} mean_consumption_sog\n",
     ":figwidth: 1000px\n",
@@ -358,7 +371,7 @@
     "ax.set_ylim(0,15.0)\n",
     "ax.legend()\n",
     "ax.grid(True)\n",
-    "ax.set_ylabel('consumption per nautical mile [l/NM]')\n",
+    "ax.set_ylabel('CNM [l/NM]')\n",
     "ax.set_xlabel('sog [kts]')\n",
     "\n",
     "glue(\"mean_consumption_sog\",fig, display=False)\n"
@@ -377,9 +390,9 @@
    "source": [
     "speed_table = df_speed_table[['sog_kt','rpm','fuel_rate','fuel_per_m']].copy()\n",
     "speed_table['sog_kt'] = speed_table['sog_kt'].round(decimals=1)\n",
-    "speed_table['rpm'] = speed_table['rpm'].round(decimals=0)\n",
-    "speed_table['fuel_rate'] = (1000*speed_table['fuel_rate']).round(decimals=0)\n",
-    "speed_table['fuel_per_m'] = (speed_table['fuel_per_m']).round(decimals=0)\n",
+    "speed_table['rpm'] = speed_table['rpm'].round(decimals=0).astype(int)\n",
+    "speed_table['fuel_rate'] = (1000*speed_table['fuel_rate']).round(decimals=1)\n",
+    "speed_table['fuel_per_m'] = (speed_table['fuel_per_m']).round(decimals=1)\n",
     "\n",
     "renames['fuel_rate'] = 'fuel rate [l/h]'\n",
     "renames['fuel_per_m'] = 'consumption per nautical mile [l/NM]'\n",
@@ -401,92 +414,100 @@
     "```{list-table} Speed table\n",
     ":header-rows: 1\n",
     ":name: speed_table\n",
-    "* - sog_kt [kts]\n",
+    "* - sog_kt\n",
     "  - rpm\n",
     "  - fuel rate [l/h]\n",
     "  - consumption per nautical mile [l/NM]\n",
     "* - 0.1\n",
     "  - 15.0\n",
-    "  - 12.0\n",
-    "  - 265.0\n",
+    "  - 11.8\n",
+    "  - 265.5\n",
     "* - 1.7\n",
     "  - 616.0\n",
-    "  - 18.0\n",
+    "  - 17.7\n",
     "  - 11.0\n",
     "* - 4.1\n",
     "  - 687.0\n",
-    "  - 23.0\n",
-    "  - 6.0\n",
+    "  - 22.7\n",
+    "  - 5.7\n",
     "* - 6.1\n",
     "  - 722.0\n",
-    "  - 28.0\n",
-    "  - 5.0\n",
+    "  - 27.6\n",
+    "  - 4.6\n",
     "* - 7.9\n",
     "  - 929.0\n",
-    "  - 44.0\n",
-    "  - 6.0\n",
+    "  - 44.1\n",
+    "  - 5.5\n",
     "* - 9.8\n",
     "  - 1203.0\n",
-    "  - 76.0\n",
-    "  - 8.0\n",
+    "  - 76.2\n",
+    "  - 7.8\n",
     "* - 11.9\n",
     "  - 1346.0\n",
-    "  - 94.0\n",
-    "  - 8.0\n",
+    "  - 93.5\n",
+    "  - 7.9\n",
     "* - 14.0\n",
     "  - 1395.0\n",
-    "  - 110.0\n",
-    "  - 8.0\n",
+    "  - 109.7\n",
+    "  - 7.9\n",
     "* - 16.0\n",
     "  - 1436.0\n",
-    "  - 119.0\n",
-    "  - 7.0\n",
+    "  - 118.7\n",
+    "  - 7.4\n",
     "* - 18.0\n",
     "  - 1481.0\n",
-    "  - 127.0\n",
+    "  - 126.7\n",
     "  - 7.0\n",
     "* - 20.1\n",
     "  - 1542.0\n",
-    "  - 135.0\n",
-    "  - 7.0\n",
+    "  - 134.9\n",
+    "  - 6.7\n",
     "* - 22.0\n",
     "  - 1580.0\n",
-    "  - 146.0\n",
-    "  - 7.0\n",
+    "  - 146.5\n",
+    "  - 6.7\n",
     "* - 24.1\n",
     "  - 1632.0\n",
     "  - 157.0\n",
-    "  - 7.0\n",
+    "  - 6.5\n",
     "* - 26.0\n",
     "  - 1673.0\n",
-    "  - 171.0\n",
-    "  - 7.0\n",
+    "  - 170.5\n",
+    "  - 6.6\n",
     "* - 28.0\n",
     "  - 1716.0\n",
-    "  - 179.0\n",
-    "  - 6.0\n",
+    "  - 178.5\n",
+    "  - 6.4\n",
     "* - 29.9\n",
     "  - 1755.0\n",
-    "  - 197.0\n",
-    "  - 7.0\n",
+    "  - 197.2\n",
+    "  - 6.6\n",
     "* - 32.0\n",
     "  - 1804.0\n",
-    "  - 216.0\n",
-    "  - 7.0\n",
+    "  - 216.2\n",
+    "  - 6.8\n",
     "* - 34.1\n",
     "  - 1857.0\n",
-    "  - 227.0\n",
-    "  - 7.0\n",
+    "  - 227.2\n",
+    "  - 6.7\n",
     "* - 36.0\n",
     "  - 1886.0\n",
-    "  - 239.0\n",
-    "  - 7.0\n",
+    "  - 239.2\n",
+    "  - 6.6\n",
     "* - 37.6\n",
     "  - 1947.0\n",
-    "  - 256.0\n",
-    "  - 7.0\n",
+    "  - 256.3\n",
+    "  - 6.8\n",
     "\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dec7d02f-5903-48b7-8ff0-b39853ea4de8",
+   "metadata": {},
+   "source": [
+    "## Fuel consumption model"
    ]
   },
   {
@@ -548,7 +569,7 @@
     "    ax.set_xticks(np.arange(0,int(np.ceil(data['sog_kt'].max())),2));\n",
     "    ax.grid(True)\n",
     "    ax.legend()\n",
-    "    ax.set_ylabel('Consumption per nautical mile [L/NM]')\n",
+    "    ax.set_ylabel('CNM [L/NM]')\n",
     "    ax.set_xlabel('Speed over ground [m/s]')\n",
     "    \n",
     "    \n",
@@ -565,10 +586,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1796587a-b474-4482-8fdd-ebebc9bf0776",
+   "metadata": {},
+   "source": [
+    "## Fuel saving potential"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4f572ec5-5d69-40b7-acd0-57056885fb44",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "ship = 'SSRS15-01_322012079'\n",
@@ -582,7 +615,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "131bfa1b-4339-487c-836a-543b8bfa1f67",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "good_speeds = [5,25,36]"
@@ -592,7 +629,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "122141a4-b1ed-4097-af4f-d470e2520b48",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "import scipy.interpolate\n",
@@ -604,10 +645,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e1e3a0dd-38ab-45a0-863c-5d3ad953a0c4",
+   "metadata": {},
+   "source": [
+    "A fuel saving scenario is simulated for 01. In this scenario all data points are divided into three speeds groups: 5, 25 and 36 kts (see {numref}`scenario`). The speed is changed to either 5, 25 or 36 kts depending on the group. The fuel consumption is predicted with the developed model covering the same distance for each group.\n",
+    "\n",
+    "```{glue:figure} scenario\n",
+    ":figwidth: 1000px\n",
+    ":name: \"scenario\"\n",
+    "\n",
+    "Fuel saving scenario using speeds: 5, 25 and 36 kts.\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3ad4a612-6868-4de0-b51f-f11e6f82d174",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "fig,ax=plt.subplots()\n",
@@ -623,7 +683,10 @@
     "\n",
     "for good_speed, group in data.groupby(by=['good_speed'], sort=False):\n",
     "    \n",
-    "    group.resample('10S').mean().plot(x='sog_kt', y='fuel_per_m', style='.', alpha=0.1, ax=ax, label='__no_label__')\n",
+    "    plot = group.resample('10S').mean().plot(x='sog_kt', y='fuel_per_m', \n",
+    "                                      style='.', alpha=0.1, ax=ax, label=\"__no_legend__\")\n",
+    "    \n",
+    "    ax.plot([], '.', label=f\"{good_speed} kts\", color=plot.get_lines()[-1].get_color())\n",
     "    \n",
     "    sog = good_speed*1.852/3.6\n",
     "    fuel_rate = model.predict([[sog]])\n",
@@ -633,14 +696,22 @@
     "    \n",
     "    ax.set_ylim(group['fuel_per_m'].quantile(0.01), \n",
     "                group['fuel_per_m'].quantile(0.90))\n",
-    "    "
+    "ax.legend(loc='lower right')\n",
+    "ax.grid(True)\n",
+    "ax.set_ylabel('CNM [L/NM]')\n",
+    "ax.set_xlabel('Speed over ground [m/s]')\n",
+    "glue(\"scenario\",fig, display=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4eb76b3e-0006-4d32-9e0f-d6429568bb42",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "consumptions = pd.Series()\n",
@@ -659,24 +730,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b473f31-f3bf-45b5-8c8f-6d41cca114e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "consumptions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "aaf90c13-fac5-4207-ba5a-9efd8b51236a",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "df_consumptions = {key: values.loc[ship,'consumption'] for key,values in statistics_all.items()}\n",
     "df_consumptions['scenario'] = consumptions.sum()\n",
     "df_consumptions = pd.Series(df_consumptions)\n",
-    "df_consumptions"
+    "table = df_consumptions.to_frame(name='total fuel consumption [m3]').transpose().round(decimals=1)\n",
+    "\n",
+    "print(df_to_myst(table, \n",
+    "                 title=f'Fuel saving potential', \n",
+    "                 name=f\"total_fuel_consumption\", include_index=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d975cecf-d42f-4dcc-81a4-5245607a9bd2",
+   "metadata": {},
+   "source": [
+    "The predicted total fuel consumption for 01 in the scenario is shown together with the total fuel consumtion for all data, moving data and running data in {numref}`total_fuel_consumption`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5167826f-7951-4b72-a8f6-56f88928ea2d",
+   "metadata": {},
+   "source": [
+    "```{list-table} Fuel saving potential\n",
+    ":header-rows: 1\n",
+    ":name: total_fuel_consumption\n",
+    "* -  \n",
+    "  - all\n",
+    "  - moving\n",
+    "  - running\n",
+    "  - scenario\n",
+    "* - total fuel consumption [m3]\n",
+    "  - 7.7\n",
+    "  - 4.6\n",
+    "  - 4.0\n",
+    "  - 3.9\n",
+    "\n",
+    "```"
    ]
   }
  ],
