Fixed typo in report kts...

--- a/docs/ssrs/03.01_results.ipynb
+++ b/docs/ssrs/03.01_results.ipynb
@@ -181,6 +181,7 @@
    "id": "80a05f8d-363d-4ed3-a27a-23db44cd6e80",
    "metadata": {},
    "source": [
+    "\n",
     "```{list-table} Statistics all\n",
     ":header-rows: 1\n",
     ":name: statistics_all\n",
@@ -196,14 +197,14 @@
     "  - 20.1\n",
     "  - 11.6\n",
     "  - 660.3\n",
-    "  - 3.4\n",
+    "  - 1.7\n",
     "  - 380.9\n",
     "* - SSRS15-03\n",
     "  - 7.0\n",
     "  - 15.0\n",
     "  - 33.3\n",
     "  - 210.8\n",
-    "  - 0.9\n",
+    "  - 0.4\n",
     "  - 468.8\n",
     "\n",
     "```\n",
@@ -224,14 +225,14 @@
     "  - 62.6\n",
     "  - 7.0\n",
     "  - 649.0\n",
-    "  - 17.3\n",
+    "  - 8.9\n",
     "  - 72.9\n",
     "* - SSRS15-03\n",
     "  - 4.0\n",
     "  - 17.7\n",
     "  - 20.4\n",
     "  - 197.4\n",
-    "  - 1.7\n",
+    "  - 0.9\n",
     "  - 227.9\n",
     "\n",
     "```\n",
@@ -252,17 +253,19 @@
     "  - 107.2\n",
     "  - 6.2\n",
     "  - 638.9\n",
-    "  - 33.4\n",
+    "  - 17.2\n",
     "  - 37.2\n",
     "* - SSRS15-03\n",
     "  - 1.2\n",
     "  - 164.1\n",
     "  - 7.6\n",
     "  - 153.7\n",
-    "  - 41.8\n",
+    "  - 21.5\n",
     "  - 7.2\n",
     "\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -570,7 +573,7 @@
     "    ax.grid(True)\n",
     "    ax.legend()\n",
     "    ax.set_ylabel('CNM [L/NM]')\n",
-    "    ax.set_xlabel('Speed over ground [m/s]')\n",
+    "    ax.set_xlabel('Speed over ground [kts]')\n",
     "    \n",
     "    \n",
     "    ax = axes[1]\n",
@@ -583,6 +586,27 @@
     "    name = f\"data_{ship}\"\n",
     "    display(name)\n",
     "    glue(name, fig, display=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6968969-8844-46a0-8ba2-13dd0cd6baa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data_running['SSRS15-03_322012059']()\n",
+    "data.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb00e2a6-be79-4f73-89e1-332adf3c9c04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "11.051626*3.6/1.852*3.6/1.852"
    ]
   },
   {
@@ -777,6 +801,14 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "356c08da-233a-4f38-b118-a3461fc5a217",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
